Updated styling and uploaded new profile picture

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #000;
-  color: #fff;
+  background-color: #ECFAE5;
+  color: #0ABAB5;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -19,7 +19,7 @@ nav ul{
 
 a{
     text-decoration: none;
-    color: white;
+    color: #B0DB9C;
     transition: ease-in-out 0.3s;
 }
 
@@ -28,8 +28,8 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: #ff4c4c;
-  text-shadow: 0 0 10px #ff4c4c;
+  color: #0ABAB5;
+  text-shadow: 0 0 10px #0ABAB5;
   letter-spacing: 1px;
 }
 
@@ -53,7 +53,7 @@ nav ul li a:hover {
 }
 
 .red {
-  color: #ff3c3c;
+  color: ADEED9;
 }
 
 .hero-text h1 {
@@ -68,20 +68,20 @@ nav ul li a:hover {
 }
 
 .btn {
-  background-color: #b30000;
-  color: white;
+  background-color: #EBFFD8;
+  color: #56DFCF;
   padding: 12px 25px;
   text-decoration: none;
   font-family: monospace;
   font-weight: bold;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(255, 0, 0, 0.4);
+  box-shadow: 0 0 10px rgba(114, 55, 55, 0.4);
   transition: all 0.3s ease-in-out;
 }
 
 .btn:hover {
-  background-color: #ff0000;
-  box-shadow: 0 0 20px rgba(255, 0, 0, 0.8);
+  background-color: #0ABAB5;
+  box-shadow: 0 0 20px rgba(0, 255, 64, 0.8);
 }
 
 .hero-image img {
@@ -89,7 +89,7 @@ nav ul li a:hover {
   height: 400px;
   object-fit: cover;
   border-radius: 50%;
-  border: 4px solid #aa0000;
+  border: 4px solid #0ABAB5;
 }
 
 .nav-bar .container {
@@ -125,7 +125,7 @@ h2 a{
 
 h4 {
   font-size: large;
-  color: #aa0000;
+  color: #0ABAB5;
 }
 
 a {
@@ -141,11 +141,11 @@ a {
 }
 
 .project-card {
-  background-color: #111;
-  border: 1px solid #333;
+  background-color:#ECFAE5 ;
+  border: 1px solid #B0DB9C;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(255, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 255, 55, 0.2);
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -154,26 +154,26 @@ a {
 
 .project-card:hover {
   transform: translateY(-10px);
-  box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
-  border: 1px solid #ff4c4c;
+  box-shadow: 0 0 20px rgba(29, 197, 253, 0.5);
+  border: 1px solid #B0DB9C;
 }
 
 .project-card h4 {
   margin: 0;
   font-size: 1.2rem;
-  color: #ff4c4c;
+  color: #0ABAB5;
 }
 
 .project-card p {
   font-size: 0.95rem;
-  color: #ccc;
+  color: #0ABAB5;
   line-height: 1.4;
 }
 
 h2 {
   font-size: 2.2rem;
   margin-bottom: 15px;
-  color: #ff4c4c;
+  color: #B0DB9C;
   text-transform: uppercase;
   letter-spacing: 1px;
   text-align: left;
@@ -203,8 +203,8 @@ html {
 }
 
 .skill-tag {
-  background-color: #1a1a1a;
-  border: 1px solid #ff4c4c;
+  background-color: #8DBCC7;
+  border: 1px solid #B0DB9C;
   padding: 10px 20px;
   border-radius: 20px;
   color: #fff;
@@ -213,13 +213,13 @@ html {
 }
 
 .skill-tag:hover {
-  background-color: #ff4c4c;
+  background-color: #B0DB9C;
   transform: scale(1.1);
 }
 
 
 .contact-card {
-  background-color: #111;
+  background-color: #8DBCC7;
   padding: 40px 30px;
   border-radius: 12px;
   margin: 60px auto;
@@ -232,11 +232,11 @@ html {
 
 .contact-card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 0 30px rgba(255, 0, 0, 0.4);
+  box-shadow: 0 0 30px rgba(0, 221, 255, 0.4);
 }
 
 .contact-card h2 {
-  color: #ff4c4c;
+  color: #fff;
   font-size: 2rem;
   margin-bottom: 20px;
   letter-spacing: 1px;
@@ -244,20 +244,20 @@ html {
 }
 
 .contact-container p {
-  color: #ccc;
+  color: #fff;
   font-size: 1rem;
   margin: 10px 0;
 }
 
 .contact-container a {
-  color: #ff4c4c;
+  color: #B0DB9C;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s ease;
 }
 
 .contact-container a:hover {
-  color: #fff;
+  color:#0ABAB5 ;
 }
 
 @keyframes fadeInUp {
